--- a/client_spa_src/src/pageedit/templates/form.blockinfotemplates.tpl.html
+++ b/client_spa_src/src/pageedit/templates/form.blockinfotemplates.tpl.html
@@ -3,7 +3,7 @@
 <div class="modal-content">
     <div class="modal-header">
         <h4 ng-if="!currEntity.id">Новый Шаблон информационного блока</h4>
-        <h4 ng-if="currEntity.id">Информационный блок <strong>{{currEntity.name}}</strong></h4>
+        <h4 ng-if="currEntity.id">Шаблон информационного блока <strong>{{currEntity.name}}</strong></h4>
     </div>
     <form name="EditForm" class="form-horizontal" role="form" ng-submit="onSave(editEntity)" loading-container="isBusy" novalidate>
         <div class="modal-body">
@@ -35,7 +35,7 @@
                     <button class="btn btn-lg fa fa-3x fa-eyedropper" ng-style="{ backgroundColor: editEntity.fillColor }" colorpicker type="button" colorpicker-position="top" ng-model="editEntity.fillColor" value="#f2f2f2"></button>
                 </div>
             </div>  
-<!--            <div class="form-group">
+            <div class="form-group">
                 <div class="col-sm-6">
                     <label class="control-label col-sm-4" for="model_height">
                         Высота
@@ -56,7 +56,7 @@
                     </div>
                 </div>
 
-            </div>  -->
+            </div>  
         </div>
         <div class="modal-footer">
             <button type="submit" class="btn btn-primary btn_save" ng-disabled="EditForm.$invalid">{{"DIALOGS_SAVE"| translate}}</button>
