--- a/client_spa_src/src/pageedit/templates/pageedit_index.tpl.html
+++ b/client_spa_src/src/pageedit/templates/pageedit_index.tpl.html
@@ -15,6 +15,24 @@ Drag selection rectangle.
             stroke-width: 2;
             fill: transparent;
         }
+        .dragResizing{
+            cursor: se-resize;
+            /*cursor: url(images/my-cursor.png), auto;*/
+            fill: #f2f2f2;
+        }
+
+        svg text {
+            font-family: FontAwesome;
+        }
+        svg rect {
+            font-family: FontAwesome;
+        }
+        .blockinfo{
+            cursor: move;
+        }
+        .panelActions{
+            cursor:  pointer;
+        }
     </style>
     <div class="col-sm-4">
         <!--        <ul class="btn-group">
@@ -25,14 +43,14 @@ Drag selection rectangle.
         </div>
         <ul class="col-sm-12 list-group ">
             <li class="col-sm-12 list-group-item" ng-repeat="item in listBlockinfoTpl track by item.id"> 
-                <div class="btn-group  col-sm-3">
-                    <button  type="button"  class="btn btn-success col-sm-6" ng-click="onEditTplBlockinfo(item)">
-                        <i class="fa fa-pencil  pull-left"></i> 
-                    </button>  
-                    <button  type="button" class="btn btn-danger  col-sm-6 " ng-click="onDeleteTplBlockinfo(item)">
-                        <i class="fa fa-trash  pull-left"></i> 
-                    </button> 
-                </div>    
+                    <div class="btn-group  col-sm-3">
+                        <button  type="button"  class="btn btn-success col-sm-6" ng-click="onEditTplBlockinfo(item)">
+                            <i class="fa fa-pencil  pull-left"></i> 
+                        </button>  
+                        <button  type="button" class="btn btn-danger  col-sm-6 " ng-click="onDeleteTplBlockinfo(item)">
+                            <i class="fa fa-trash  pull-left"></i> 
+                        </button> 
+                    </div>    
                 <div class="btn-group col-sm-9">
                     <button  type="button"  ng-style="{ backgroundColor: item.fillColor }"
                              draggable-blockinfo data-value="item" class="btn btn-primary draggable-blockinfo form-control ">
@@ -108,72 +126,114 @@ Drag selection rectangle.
                 <g ng-repeat="node in editNewspaper.blockInfo"
                    ng-mousedown="blockinfoMouseDown($event, node)"
                    ng-attr-transform="translate({{node.x}}, {{node.y}})"
+                   class="blockinfo"
                    > 
-                    <rect  ng-click="setSelect(node)"
-                           ng-attr-x="0"
-                           ng-attr-y="0" 
-                           ng-attr-width="{{node.width||(node.width = 25)}}" 
-                           ng-attr-height="{{node.height||(node.height=20)}}" 
-                           style="stroke-width:1;stroke:rgb(0,0,0)"
-                           ng-attr-fill="{{node.fillColor}}"
-                           fill="url(#nodeBackgroundGradient)"
-                           tooltip="{{node.name}}({{node.width}}x{{node.height}})"
-                           tooltip-append-to-body="true" 
-                           ng-dblclick="onEditBlockinfo(node)"
-                           ></rect>
+
+                    <rect   
+                        ng-attr-x="0"
+                        ng-attr-y="0" 
+                        x="0"
+                        y="0"  
+                        ng-attr-width="{{node.width||(node.width = 25)}}" 
+                        ng-attr-height="{{node.height||(node.height=20)}}" 
+                        style="stroke-width:1;stroke:rgb(0,0,0)"
+                        ng-attr-fill="{{node.fillColor}}"
+                        fill="url(#nodeBackgroundGradient)"
+                        tooltip="{{node.name}}({{node.width}}x{{node.height}})"
+                        tooltip-append-to-body="true" 
+                        ng-dblclick="onEditBlockinfo(node)"
+
+                        ></rect>
+
+                    <!--                    <rect 
+                                            class="titleBox drag"
+                                            ng-attr-x={{node.width-10}}"
+                                            x="0" y="0"
+                                            ng-attr-width="{{node.width||(node.width = 25)}}"  width="232" height="25" ng-attr-fill="{{node.fillColor}}">
+                    
+                                        </rect>-->
+                    <text class="panelActions" x="0" y="10" font-family="FontAwesome" font-weight="normal" font-size="10">
+                        <!--                        <tspan   x="10" y="10"> &#xf007;</tspan> -->
+                        <tspan  ng-click="onDeleteBlockinfo($event, node)" x="0" y="10">&#xf1f8;</tspan>
+                    </text>
+                    <!--                    <rect  
+                                            ng-attr-x="{{node.width - 5}}"
+                                            ng-attr-y="{{node.height - 5}}" 
+                                            width="5" 
+                                            height="5" 
+                                            x="0"
+                                            y="0"  font-size="8"
+                                            class="dragResizing"
+                                            ng-mousedown="blockResizeMouseDown($event, node)"
+                                            >&#xf0b2 </rect>-->
+                    <!-- element blockinfo resize then mouse down -->
+                    <text 
+                        ng-attr-x="{{node.width - 8}}"
+                        ng-attr-y="{{node.height - 2}}" 
+                        width="10" 
+                        height="10" 
+                        x="0"
+                        y="0"  
+                        class="dragResizing"
+                        ng-mousedown="blockResizeMouseDown($event, node)" font-family="FontAwesome" font-weight="normal" font-size="8">
+                        &#xf0b2;
+                    </text>
+
                     <text 
                         ng-attr-x="{{node.width / 2}}"
                         ng-attr-y="{{node.height / 2}}"
                         x="0"
                         y="0"
+                        font-family="sans-serif" font-size="10px"
                         text-anchor="middle"
-                        alignment-baseline="middle"
+                        alignmentbaseline="middle"
                         >
                         {{node.name}}
                     </text> 
 
                 </g>
-                <rect
-                    ng-if="dragSelecting"
-                    class="drag-selection-rect"
-                    ng-attr-x="{{dragSelectionRect.x}}"
-                    ng-attr-y="{{dragSelectionRect.y}}"
-                    ng-attr-width="{{dragSelectionRect.width}}"
-                    ng-attr-height="{{dragSelectionRect.height}}"
-                    >
-                </rect>
+                <!--                <rect
+                                    ng-if="dragSelecting"
+                                    class="drag-selection-rect"
+                                    ng-attr-x="{{dragSelectionRect.x}}"
+                                    ng-attr-y="{{dragSelectionRect.y}}"
+                                    ng-attr-width="{{dragSelectionRect.width}}"
+                                    ng-attr-height="{{dragSelectionRect.height}}"
+                                    >
+                                </rect>-->
 
-                <g ng-if="dragResizing">
-                    <rect
-                        ng-if="dragResizing"
-                        class="drag-selection-rect"
-                        ng-attr-x="{{dragResizingRect.x}}"
-                        ng-attr-y="{{dragResizingRect.y}}"
-                        ng-attr-width="{{dragResizingRect.width}}"
-                        ng-attr-height="{{dragResizingRect.height}}"
-                        >  
-                    <rect x="0" y="0" width="100%" height="100%" fill-opacity="0.5" opacity="1" 
-                          class="moveActionTrigger" />
-                    <line x1="0" y1="0" x2="100%" y2="0" stroke="#000" stroke-width="5" opacity="1" 
-                          class="topActionTrigger" />
-                    <line x1="0" y1="100%" x2="100%" y2="100%" stroke="#000" stroke-width="5" opacity="1" 
-                          class="bottomActionTrigger" />
-                    <line x1="0" y1="0" x2="0" y2="100%" stroke="#000" stroke-width="5" opacity="1" 
-                          class="leftActionTrigger" />
-                    <line x1="100%" y1="0" x2="100%" y2="100%" stroke="#000" stroke-width="5" opacity="1" 
-                          class="rightActionTrigger" />
-                    <circle cx="0" cy="0" r="8" stroke="#000" stroke-width="0" fill="#000" opacity="1" 
-                            class="topLeftActionTrigger" />
-                    <circle cx="100%" cy="0" r="8" stroke="#000" stroke-width="0" fill="#000" opacity="1" 
-                            class="topRightActionTrigger" />
-                    <circle cx="0" cy="100%" r="8" stroke="#000" stroke-width="0" fill="#000" opacity="1" 
-                            class="bottomLeftActionTrigger" />
-                    <circle cx="100%" cy="100%" r="8" stroke="#000" stroke-width="0" fill="#000" opacity="1" 
-                            class="bottomRightActionTrigger" />
-                    </rect> 
-                        <circle cx="100%" cy="100%" r="8" stroke="#000" stroke-width="0" fill="#000" opacity="1" 
-                            class="bottomRightActionTrigger" />
-                </g>
+                <!--                                <g ng-if="dragResizing">
+                                                    <rect
+                                                        ng-if="dragResizing"
+                                                        class="drag-selection-rect"
+                                                        ng-attr-x="{{dragResizingRect.x}}"
+                                                        ng-attr-y="{{dragResizingRect.y}}"
+                                                        ng-attr-width="{{dragResizingRect.width}}"
+                                                        ng-attr-height="{{dragResizingRect.height}}"
+                                                        >  
+                                                    <rect x="0" y="0" width="100%" height="100%" fill-opacity="0.5" opacity="1" 
+                                                          class="moveActionTrigger" />
+                                                    <line x1="0" y1="0" x2="100%" y2="0" stroke="#000" stroke-width="5" opacity="1" 
+                                                          class="topActionTrigger" />
+                                                    <line x1="0" y1="100%" x2="100%" y2="100%" stroke="#000" stroke-width="5" opacity="1" 
+                                                          class="bottomActionTrigger" />
+                                                    <line x1="0" y1="0" x2="0" y2="100%" stroke="#000" stroke-width="5" opacity="1" 
+                                                          class="leftActionTrigger" />
+                                                    <line x1="100%" y1="0" x2="100%" y2="100%" stroke="#000" stroke-width="5" opacity="1" 
+                                                          class="rightActionTrigger" />
+                                                    <circle cx="0" cy="0" r="8" stroke="#000" stroke-width="0" fill="#000" opacity="1" 
+                                                            class="topLeftActionTrigger" />
+                                                    <circle cx="100%" cy="0" r="8" stroke="#000" stroke-width="0" fill="#000" opacity="1" 
+                                                            class="topRightActionTrigger" />
+                                                    <circle cx="0" cy="100%" r="8" stroke="#000" stroke-width="0" fill="#000" opacity="1" 
+                                                            class="bottomLeftActionTrigger" />
+                                                    <circle cx="100%" cy="100%" r="8" stroke="#000" stroke-width="0" fill="#000" opacity="1" 
+                                                            class="bottomRightActionTrigger" />
+                                                    </rect> 
+                                                        <circle cx="100%" cy="100%" r="8" stroke="#000" stroke-width="0" fill="#000" opacity="1" 
+                                                                  ng-mousedown="blockResizeMouseDown($event, dragResizingRect.node)"
+                                                            class="bottomRightActionTrigger" />
+                                                </g>-->
             </svg>   
         </div> 
         <section class="col-sm-2 dropblok"  drop-blockinfo  dop-param="currEditPage" drop="handleDropBlockInfo">
