--- a/client_spa_src/src/home/templates/home.tpl.html
+++ b/client_spa_src/src/home/templates/home.tpl.html
@@ -1,9 +1,14 @@
 <!-- template "home.tpl.html"-->
 <section class="container-fluid">
-    <div class="jumbotron">
-        <h1>Визуальный планировщик</h1>
-        <p>Демонстрационное веб-приложения планирования выпусков(номеров) газет с графическим режимом.</p>
-        <p><a ui-sref="referencies.releases" class="btn btn-primary btn-lg">Приступить >></a></p>
+    <div class="jumbotron row">
+        <div class="col-sm-2"> 
+            <img src="/images/icon300x480 (2).png" alt=""/>
+        </div>
+        <div class="col-sm-10"> 
+            <h1>Визуальный планировщик</h1>
+            <p>Демонстрационное веб-приложения планирования выпусков(номеров) газет в графическом режиме.</p>
+            <p><a ui-sref="referencies.releases" class="btn btn-primary btn-lg">Приступить >></a></p>
+        </div>
     </div>
 
 </section>
