update Home module

--- a/client_spa_src/src/home/templates/home.tpl.html
+++ b/client_spa_src/src/home/templates/home.tpl.html
@@ -4,12 +4,12 @@
         <div class="col-sm-2"> 
             <img src="/images/icon300x480 (2).png" alt=""/>
         </div>
-        <div class="col-sm-10"> 
+        <div class="col-sm-10" ng-switch="isAuthenticated()"> 
             <h1>Визуальный планировщик</h1>
             <p>Демонстрационное веб-приложения планирования выпусков(номеров) газет в графическом режиме.</p>
-            <p><a ui-sref="referencies.releases" class="btn btn-primary btn-lg">Приступить >></a></p>
+            <p ng-switch-when="true"><a ui-sref="referencies.releases" class="btn btn-primary btn-lg">Приступить к работе >></a></p>
+            <p ng-switch-when="false"><a href="#/login" class="btn btn-primary btn-lg">Представиться >></a></p>
         </div>
     </div>
-
 </section>
 <!-- //template "home.tpl.html"-->
