--- a/client_spa_src/myDebug/resizing/templates/resizing.tpl.html
+++ b/client_spa_src/myDebug/resizing/templates/resizing.tpl.html
@@ -4,7 +4,7 @@
     <div class="col-sm-6"><input type="number" ng-model="step">
             <div  ng-init="step = 8" svg-resizing> 
                 <div style="left:100px;top:100px;position:relative;width:350px;height:200px" id="wrapper">
-                    <svg xmlns="http://www.w3.org/2000/svg" version="1.1" style="width:350px;height:200px"
+                    <svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="100%" height="100%" viewBox="0 0 297 420"
                          id="myShape">
                         <ellipse cx="50%" cy="50%" rx="50%" ry="50%" 
                                  stroke="#FF0000" stroke-width="2" fill="#800000" />
@@ -47,6 +47,8 @@
     </div>
     <div class="col-sm-6"> 
         <viewer-page-newspaper mouse-capture ng-model="listBlockinfoTpl" step="step" style="border: 3px solid;"> </viewer-page-newspaper>
+        
     </div>
+      
 </section>
 <!-- //template "about.tpl.html"-->
